<resources>
    <string name="app_name">voting systems</string>
    <string name="title_activity_signup">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_newaccount">newaccount</string>
    <string name="name">Name</string>
    <string name="names">Name:</string>
    <string name="string">String:</string>
    <string name="Dob">Date of Birth:</string>
    <string name="roll">Roll Number:</string>
    <string name="mail">E-mail ID:</string>
    <string name="phone">Phone Number:</string>
    <string name="batch">Batch:</string>
    <string name="password">Password:</string>
    <string name="reenter">Re-Enter Password:</string>
    <string name="signup">Sign Up</string>
    <string name="section">Section</string>
    <string name="secc">Section:</string>
    <string name="welcome">WELCOME</string>
    <string name="submit">Submit</string>
    <string name="APPNAME">VOTING SYSTEMS</string>
    <string name="newvote">Create New Vote</string>
    <string name="results">Check Results</string>
    <string name="vote">Vote</string>
    <string name="poll">Create New Poll</string>
    <string name="mail2">E-mail ID (username):</string>
    <string name="username">username:</string>
    <string name="bleh">Caste Your vote here</string>
    <string name="next">Start</string>
    <string name="Question">question</string>
    <string name="logout" />
    <string name="logout1">log out</string>
    <string name="unique">Unique id</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="back">BACK</string>
    <string name="title_activity_list_view">list_view</string>
    <string name="submit1">SUBMIT</string>
    <string name="choice_4">Choice 4 :</string>
    <string name="choice_3">Choice 3 :</string>
    <string name="choice_2">Choice 2 :</string>
</resources>
