<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#009688"
    android:orientation="vertical"
    tools:context=".signingup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.15"
        android:textSize="35sp"
        android:text="@string/signup"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/names"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="57dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:hint="@string/names"
        android:layout_marginBottom="50sp"
        />






    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mail2"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="129dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="50sp"
        android:hint="@string/mail" />




    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="50sp"/>




    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:layout_gravity="center"
        android:text="@string/submit" />


</LinearLayout>