<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create"
    android:background="#009688"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/unique" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ems="10"
        android:textAllCaps="true"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/Question"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:inputType="textPersonName"
        android:hint="Choice 1 :"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="135dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:inputType="textPersonName"
        android:hint="@string/choice_2"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="204dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="20sp"
        android:hint="@string/choice_3"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="278dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:layout_marginTop="20sp"
        android:inputType="textPersonName"
        android:hint="@string/choice_4"
        app:layout_constraintBottom_toTopOf="@+id/button"
        tools:layout_editor_absoluteX="25dp" />



    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit1"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="30sp"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="611dp" />

</LinearLayout>
