<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".honepage"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:layout_marginTop="30sp"
        android:textAllCaps="true"
        android:text="@string/app_name"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="42dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="235sp"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:text="@string/poll"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="85dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="235sp"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:text="@string/results"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="133dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="235sp"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="100sp"
        android:layout_weight="1"
        android:text="@string/vote"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="181dp" />

</LinearLayout>