<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    tools:context=".MainActivity">
    />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:textColor="#FF5722"
        android:layout_centerInParent="true"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="355dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:gravity="center"
        android:layout_marginTop="40sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/next" />
</RelativeLayout>