<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="#009688"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="25sp"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_signup"
        android:layout_gravity="center"
        android:layout_weight="1.1"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="46dp" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:text="@string/username"
        android:textAllCaps="true"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="103dp" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50sp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="173dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="50sp"
        android:textAllCaps="true"
        android:background="@android:color/darker_gray"
        android:gravity="center_horizontal"
        android:text="@string/password"
        android:layout_gravity="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50sp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="353dp" />


    <Button
        android:id="@+id/button4"
        android:layout_width="110sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:layout_weight="1"
        android:text="@string/submit"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="428dp" />


</LinearLayout>
